--- a/resume.html
+++ b/resume.html
@@ -1,44 +1,246 @@
+<!doctype html>
+<html>
 <head>
-  <meta charset="utf-8">
-<link rel="stylesheet" type="text/css" href="styling.css">
-</head><h1>Raviteja Lingineni</h1>
-<h2>C# Developer</h2>
-<blockquote>
-<p><a href="rlingineni@live.com">rlingineni@live.com</a>
-<a href="rlingineni.me">rlingineni.me</a>
-(972) 888-7777</p>
-</blockquote>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+<style>
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote {
+    margin: 0;
+    padding: 0;
+}
+body {
+    font-family: "Helvetica Neue", Helvetica, "Hiragino Sans GB", Arial, sans-serif;
+    font-size: 13px;
+    line-height: 18px;
+    color: #737373;
+    background-color: white;
+    margin: 10px 13px 10px 13px;
+}
+table {
+	margin: 10px 0 15px 0;
+	border-collapse: collapse;
+}
+td,th {	
+	border: 1px solid #ddd;
+	padding: 3px 10px;
+}
+th {
+	padding: 5px 10px;	
+}
+
+a {
+    color: #0069d6;
+}
+a:hover {
+    color: #0050a3;
+    text-decoration: none;
+}
+a img {
+    border: none;
+}
+p {
+    margin-bottom: 9px;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    color: #404040;
+    line-height: 36px;
+}
+h1 {
+    margin-bottom: 18px;
+    font-size: 30px;
+}
+h2 {
+    font-size: 24px;
+}
+h3 {
+    font-size: 18px;
+}
+h4 {
+    font-size: 16px;
+}
+h5 {
+    font-size: 14px;
+}
+h6 {
+    font-size: 13px;
+}
+hr {
+    margin: 0 0 19px;
+    border: 0;
+    border-bottom: 1px solid #ccc;
+}
+blockquote {
+    padding: 13px 13px 21px 15px;
+    margin-bottom: 18px;
+    font-family:georgia,serif;
+    font-style: italic;
+}
+blockquote:before {
+    content:"\201C";
+    font-size:40px;
+    margin-left:-10px;
+    font-family:georgia,serif;
+    color:#eee;
+}
+blockquote p {
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 18px;
+    margin-bottom: 0;
+    font-style: italic;
+}
+code, pre {
+    font-family: Monaco, Andale Mono, Courier New, monospace;
+}
+code {
+    background-color: #fee9cc;
+    color: rgba(0, 0, 0, 0.75);
+    padding: 1px 3px;
+    font-size: 12px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+}
+pre {
+    display: block;
+    padding: 14px;
+    margin: 0 0 18px;
+    line-height: 16px;
+    font-size: 11px;
+    border: 1px solid #d9d9d9;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+pre code {
+    background-color: #fff;
+    color:#737373;
+    font-size: 11px;
+    padding: 0;
+}
+sup {
+    font-size: 0.83em;
+    vertical-align: super;
+    line-height: 0;
+}
+* {
+	-webkit-print-color-adjust: exact;
+}
+@media screen and (min-width: 914px) {
+    body {
+        width: 854px;
+        margin:10px auto;
+    }
+}
+@media print {
+	body,code,pre code,h1,h2,h3,h4,h5,h6 {
+		color: black;
+	}
+	table, pre {
+		page-break-inside: avoid;
+	}
+}
+</style>
+<title>Raviteja Lingineni</title>
+
+</head>
+<body>
+<p><link rel="stylesheet" type="text/css" href="styling.css"></p>
+
+<h1>Raviteja Lingineni</h1>
+
+<h3>C# Developer</h3>
+
+<p><a href="rlingineni@live.com">rlingineni@live.com</a></p>
+
+<p><a href="rlingineni.me">www.rlingineni.me</a></p>
+
+<p> (972) 757-5423</p>
+
 <hr />
-<h3>Education</h3>
-<p class="titles"><bold>
+
+<h2>Education</h2>
+
+<p><p class="titles">
 University of Texas at Dallas(June 2015 - Present)
-</bold><p/> 
+<p/></p>
+
 <ul>
 <li>Began working with Xamarin University team to update existing curriculum</li>
 <li>Created scripts to maintain C# soutions and developed mobile apps</li>
 </ul>
+
+
 <hr />
+
 <h3>EXPERIENCE</h3>
-<p class="titles">**University of Texas at Dallas(June 2015 - Present)**<p/> 
+
+<h6>University of Texas at Dallas(June 2015 - Present)</h6>
+
 <ul>
 <li>Began working with Xamarin University team to update existing curriculum</li>
 <li>Created scripts to maintain C# soutions and developed mobile apps</li>
 </ul>
-<p><strong>UNT Mechanical Engineering Research (October 2013 - August 2014)</strong></p>
+
+
+<h5>University of Texas at Dallas(June 2015 - Present)</h5>
+
 <ul>
 <li>Performed independent research on the contact patch of a tire</li>
 <li>Worked with developing better filament for FDM printers</li>
 </ul>
+
+
 <hr />
-<h3>Projects</h3>
-<p><strong>Seated</strong></p>
+
+<h2>Projects</h2>
+
+<p><p class="titles">
+Seated
+<p/></p>
+
 <ul>
-<li>Performed independent research on the contact patch of a tire</li>
-<li>Worked with developing better filament for FDM printers</li>
+<li>Cool Project to help people</li>
+<li>Made with Love</li>
 </ul>
+
+
+<p><p class="titles">
+Seated
+<p/></p>
+
+<ul>
+<li>Cool Project to help people</li>
+<li>Made with Love</li>
+</ul>
+
+
+<p><p class="titles">
+Seated
+<p/></p>
+
+<ul>
+<li>Cool Project to help people</li>
+<li>Made with Love</li>
+</ul>
+
+
 <h3>Skills</h3>
-<pre>
+
+<p><pre>
  <b>Languages:</b> C#,HTML,Javascript,CSS
  <b>Protocols:</b> C#,HTML,Javascript,CSS
-</pre>
-
+</pre></p>
+</body>
+</html>
