--- a/resume.html
+++ b/resume.html
@@ -162,29 +162,22 @@ sup {
 
 <h3>C# Developer</h3>
 
-<p><a href="rlingineni@live.com">rlingineni@live.com</a></p>
-
-<p><a href="rlingineni.me">www.rlingineni.me</a></p>
-
-<p> (972) 757-5423</p>
+<p><a href="rlingineni@live.com">rlingineni@live.com</a>  <a href="rlingineni.me">www.rlingineni.me</a> (972) 757-5423</p>
 
 <hr />
 
 <h2>Education</h2>
 
-<p><p class="titles">
-University of Texas at Dallas(June 2015 - Present)
-<p/></p>
+<h6>University of Texas at Dallas(June 2015 - Present)</h6>
 
 <ul>
 <li>Began working with Xamarin University team to update existing curriculum</li>
-<li>Created scripts to maintain C# soutions and developed mobile apps</li>
 </ul>
 
 
 <hr />
 
-<h3>EXPERIENCE</h3>
+<h2>Experience</h2>
 
 <h6>University of Texas at Dallas(June 2015 - Present)</h6>
 
@@ -194,7 +187,7 @@ University of Texas at Dallas(June 2015 - Present)
 </ul>
 
 
-<h5>University of Texas at Dallas(June 2015 - Present)</h5>
+<h6>University of North Texas(June 2015 - Present)</h6>
 
 <ul>
 <li>Performed independent research on the contact patch of a tire</li>
@@ -206,9 +199,7 @@ University of Texas at Dallas(June 2015 - Present)
 
 <h2>Projects</h2>
 
-<p><p class="titles">
-Seated
-<p/></p>
+<h6>UTD Coursebook</h6>
 
 <ul>
 <li>Cool Project to help people</li>
@@ -216,9 +207,7 @@ Seated
 </ul>
 
 
-<p><p class="titles">
-Seated
-<p/></p>
+<h6>Pneuma</h6>
 
 <ul>
 <li>Cool Project to help people</li>
@@ -226,9 +215,7 @@ Seated
 </ul>
 
 
-<p><p class="titles">
-Seated
-<p/></p>
+<h6>Seated</h6>
 
 <ul>
 <li>Cool Project to help people</li>
@@ -236,11 +223,30 @@ Seated
 </ul>
 
 
-<h3>Skills</h3>
+<h6>QuickLight</h6>
 
-<p><pre>
- <b>Languages:</b> C#,HTML,Javascript,CSS
- <b>Protocols:</b> C#,HTML,Javascript,CSS
-</pre></p>
+<ul>
+<li>Cool Project to help people</li>
+<li>Made with Love</li>
+</ul>
+
+
+<hr />
+
+<h2>Skills</h2>
+
+<pre> 
+<b>Computer Languages: </b> C#, XAML, HTML, CSS, JavaScript, 
+
+<b>Protocols & APIs:** </b> WPF, WP8, Leap Motion, Arduino IDE, Spark.IO, Intel Edison
+
+<b>Databases:</b> Azure, SQL Server, BizTalk Server
+
+<b>Software Tools:</b> Microsoft Visual Studio, Adobe Photoshop, 
+Adobe Muse, Microsoft Office, Autodesk Inventor
+</pre>
+
+
+
 </body>
 </html>
